# locked-in-communicator

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml  run.sh
backend/: pyproject.toml  requirements.txt
backend/scripts/: process_real_data.py  validate_pipeline.py
backend/src/: config.py  server.py  validation.py
backend/src/features/: __init__.py  spatial.py
backend/src/inference/: __init__.py  classifier.py
backend/src/ingestion/: __init__.py  lsl.py  simulation.py
backend/src/pipeline/: __init__.py  bci_pipeline.py
backend/src/preprocessing/: __init__.py  epoching.py  filters.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: real_data_metrics.json
frontend/src/: index.css  main.tsx
frontend/src/components/: Dashboard.tsx  OfflineAnalyzer.tsx  PlacementGuide.tsx
frontend/src/hooks/: useBCISocket.ts
frontend/src/lib/: utils.ts
frontend/src/types/: bci.ts
