[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "locked-in-communicator"
version = "0.1.0"
description = "Modular BCI pipeline for YES/NO locked-in communication experiments."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "websockets>=12.0",
]

[project.optional-dependencies]
lsl = ["pylsl>=1.16"]

[project.scripts]
lockedin-validate = "validation:main"
lockedin-verification-server = "server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["config", "validation", "server"]

[tool.setuptools.packages.find]
where = ["src"]
